--- a/src/app/pages/estabecimentos/estabecimentos.component.html
+++ b/src/app/pages/estabecimentos/estabecimentos.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <main class="po-row" *ngIf="hasEstabelecimentos">
-    <po-widget class="po-sm-6" *ngFor="let item of e_todo" p-title="{{item.nome}}" [p-height]="100"
+    <po-widget class="po-sm-6 po-mb-2" *ngFor="let item of e_todo" p-title="{{item.nome}}" [p-height]="100"
       p-primary-label="user este" (p-primary-action)="usarE(item.id)"></po-widget>
   </main>
   <po-button *ngIf="hasEstabelecimentos" p-label="Novo Estabelecimento" (p-click)="hasEstabelecimentos = false"
