--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <po-page-default>
   <div>
-    <h1>Seja Bem vindo</h1>
+    <h1>Seja Bem vindodsa</h1>
     <div>
       <po-input [(ngModel)]="e_name" class="po-sm-12" p-placeholder="Digite o nome do seu estabelecimento">
       </po-input>
